examples/test/testpolicy17746.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17746
  namespace: namespace40
spec:
  podSelector:
    matchLabels:
      key15: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value27
          key49: value47
          key34: value36
      podSelector:
        matchLabels:
          key16: value48
          key11: value37
          key35: value14
